# ADR-Master

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UPGRADE_v0.2.md  docker-compose.yml  noxfile.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
ADR/: 002-use-sqlite-for-persistence.md  003-test-adr-via-api.md
ADR/Draft/: 001-example-draft-adr.md  003-test-adr-via-api.md
app/: __init__.py  config.py  database.py  main.py
app/api/: adr.py  auth.py  healthz.py  integrations.py  mcp.py  projects.py
app/auth/: dependencies.py  utils.py
app/db/: database.py
app/mcp/: __init__.py  client.py  tools.py
app/models/: __init__.py  adr.py  base.py  job.py
app/plugins/: __init__.py  base.py  manager.py
app/routers/: __init__.py  adrs.py  jobs.py  mcp.py  plugins.py  ui.py
app/schemas/: adr.py  integration.py  mcp.py
app/services/: __init__.py  adr_service.py  github_service.py  job_service.py  lint_service.py  llm_service.py  mcp_client.py
app/static/css/: input.css  output.css
app/static/js/: app.js
app/templates/: adr_detail.html  adr_form.html  adrs_list.html  base.html  error.html  index.html  integrations.html  jobs.html  lint_results.html  plugins.html  proposals.html  settings.html
docs/: API.md  DEPLOYMENT.md  LLM-CONFIGURATION.md  LLM-Location.MD  MCP_INTEGRATION.md  OFFLINE.md
docs/adr/: ADR-0001-use-madr-format.md
examples/: madr-template.md  plugin_example.py
mcp_tools/: README.md  __init__.py  adapter.py
plugins/: example_plugin.py
tests/: __init__.py  conftest.py  test_adr_service.py
tests/integration/: test_api.py
tests/unit/: test_adr_service.py  test_llm_config.py
